# edesto-dev

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-18-debug-tools-design.md  2026-02-18-debug-tools-plan.md  2026-02-18-jtag-upload-design.md  2026-02-18-jtag-upload-plan.md  2026-02-18-multi-toolchain-design.md  2026-02-18-multi-toolchain-plan.md  2026-02-18-skills-md-design.md
edesto_dev/: boards.py  cli.py  config.py  debug_tools.py  detect.py  templates.py  toolchain.py
edesto_dev/debug/: instrument.py  scan.py  status.py
edesto_dev/serial/: parser.py  port.py  reader.py
edesto_dev/toolchains/: __init__.py  arduino.py  cmake_native.py  custom.py  espidf.py  micropython.py  platformio.py  zephyr.py
examples/ota-update/: CLAUDE.md  ota-update.ino  validate.py
examples/sensor-debug/: CLAUDE.md  sensor-debug.ino  validate.py
examples/wifi-endpoint/: CLAUDE.md  validate.py  wifi-endpoint.ino
tests/: test_boards.py  test_cli.py  test_cli_serial.py  test_config.py  test_debug_instrument.py  test_debug_scan.py  test_debug_status.py  test_debug_tools.py  test_detect.py  test_examples.py  test_registry.py  test_serial_parser.py  test_serial_port.py  test_serial_reader.py  test_templates.py  test_toolchain.py  test_toolchain_arduino.py  test_toolchain_cmake_native.py  test_toolchain_custom.py  test_toolchain_espidf.py  test_toolchain_micropython.py  test_toolchain_platformio.py  test_toolchain_zephyr.py
