[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edesto-dev"
version = "0.1.0"
description = "Use Claude Code for embedded development. One command to set up the bridge between your AI agent and your hardware."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Edesto", email = "greg@edesto.com"},
]
keywords = ["embedded", "esp32", "arduino", "firmware", "ai", "claude", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
edesto = "edesto_dev.cli:main"

[project.urls]
Homepage = "https://github.com/edesto/embedded-dev"
Repository = "https://github.com/edesto/embedded-dev"
