[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edesto-dev"
version = "0.6.0"
description = "Teach AI coding agents to compile, flash, and validate firmware on real hardware. One command to bridge any agent and any board."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Edesto", email = "greg@edesto.com"},
]
keywords = ["embedded", "esp32", "arduino", "firmware", "ai", "claude", "development", "platformio", "esp-idf", "micropython", "microcontroller"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
edesto = "edesto_dev.cli:main"

[project.urls]
Homepage = "https://edesto.com"
Repository = "https://github.com/edesto/edesto-dev"

[tool.setuptools.packages.find]
include = ["edesto_dev*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
